--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     </head>
     
     <body>
-        
+        <h1>Odin Recipes</h1>
+        <p>A collection of lunch recpies provided by <a href="https://www.allrecipes.com/">allrecipes.com</a></p>
+        <ul>
+            <li><a href="./recipes/sloppey-joes.html">sloppey-joes</a></li>
+            <li><a href="./recipes/fresh-tomato-soup.html">Fresh tomato soup</a></li>
+            <li><a href="./recipes/potato-salad.html">A potato salad</a></li>
+        </ul>
     </body>
 </html>
