Add CSS file and basic styling

--- a/recipes/fresh-tomato-soup.html
+++ b/recipes/fresh-tomato-soup.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Fresh Tomato Soup</title>
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
 
     <body>
-        <h1>Fresh Tomato Soup</h1>
+        <h1 class="header">Fresh Tomato Soup</h1>
         <img src="https://www.allrecipes.com/thmb/6HSEGi9X5JOs36brzAZTi_CAyMA=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():focal(1999x0:2001x2):format(webp)/39544-Garden-Fresh-Tomato-Soup-DDMFS-4x3-b8e94cf7ab8e42f4b79042fc0df55546.jpg" alt="A delicate tomato soup" height="300" width="300">
 
-        <h2>Description</h2>
-        <p>A simple, quick recipe that is perfect to make when tomatoes are ripe in gardens and farmers' markets for a delicious treat</p>
+        <h2 class="header">Description</h2>
+        <p class="para">A simple, quick recipe that is perfect to make when tomatoes are ripe in gardens and farmers' markets for a delicious treat</p>
 
-        <h2>Ingredients</h2>
-        <ul>
+        <h2 class="header">Ingredients</h2>
+        <ul class="list">
             <li>4 cups chopped fresh tomatoes</li>
             <li>2 cups chicken broth</li>
             <li>4 cloves garlic</li>
@@ -24,8 +25,8 @@
             <li>1 teaspoon salt, or to taste</li>
         </ul>
 
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="header">Steps</h2>
+        <ol class="list">
             <li>Gather all ingredients</li>
             <li>Combine tomatoes, chicken broth, garlic cloves, and a large slice of onion in a stockpot over medium heat. Bring to a boil, and gently simmer for about 20 minutes to blend flavors</li>
             <li>Remove from heat and run the mixture through a food mill into a large bowl, or pan. Discard any stuff left over in the food mill</li>
