--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
     <head>
         <meta charset="utf-8">
         <title>General recipes</title>
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
     
     <body>
-        <h1>Odin Recipes</h1>
-        <p>A collection of lunch recpies provided by <a href="https://www.allrecipes.com/">allrecipes.com</a></p>
-        <ul>
-            <li><a href="./recipes/sloppey-joes.html">sloppey-joes</a></li>
-            <li><a href="./recipes/fresh-tomato-soup.html">Fresh tomato soup</a></li>
-            <li><a href="./recipes/potato-salad.html">A potato salad</a></li>
-        </ul>
+        <h1 class="header">Odin Recipes</h1>
+        <p class="para border">A collection of lunch recpies provided by <a class="link" href="https://www.allrecipes.com/">allrecipes.com</a></p>
+
+        <div class="list">
+            <ul>
+                <li><a class="link" href="./recipes/sloppey-joes.html">sloppey-joes</a></li>
+                <li><a class="link" href="./recipes/fresh-tomato-soup.html">Fresh tomato soup</a></li>
+                <li><a class="link" href="./recipes/potato-salad.html">A potato salad</a></li>
+            </ul>
+        </div>
     </body>
 </html>
