--- a/recipes/potato-salad.html
+++ b/recipes/potato-salad.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Potato Salad</title>
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
 
     <body>
-        <h1>Old-Fashioned Potato Salad</h1>
+        <h1 class="header">Old-Fashioned Potato Salad</h1>
         <img src="https://www.allrecipes.com/thmb/987kgbUa9Xndp5mlvr4P6ZUcCjk=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():focal(1999x0:2001x2):format(webp)/16729-old-fashioned-potato-salad-DDMFS-4x3-3e270b1b82744aa6ac355fef41a5a43c.jpg" alt="A potato salad in a bowl">
 
-        <h2>Description</h2>
-        <p>This potato salad recipe is for the traditional creamy type of potato salad, with eggs, celery, and relish. It's perfect for making ahead to let the flavors develop</p>
+        <h2 class="header">Description</h2>
+        <p class="para">This potato salad recipe is for the traditional creamy type of potato salad, with eggs, celery, and relish. It's perfect for making ahead to let the flavors develop</p>
 
-        <h2>Ingredients</h2>
-        <ul>
+        <h2 class="header">Ingredients</h2>
+        <ul class="list">
             <li>5 potatoes</li>
             <li>3 eggs</li>
             <li>1 cup chopped celery</li>
@@ -26,8 +27,8 @@
             <li>ground black pepper to taste</li>
         </ul>
 
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="header">Steps</h2>
+        <ol class="list">
             <li>Gather all the ingredients</li>
             <li>Bring a large pot of salted water to a boil. Add potatoes and cook until tender but stil firm, about 15 minutes</li>
             <li>Drain, cool, and chop potatoes</li>
