--- a/recipes/sloppey-joes.html
+++ b/recipes/sloppey-joes.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Sloppey Joe's</title>
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
 
     <body>
-        <h1>Sloppey Joe's</h1>
+        <h1 class="header">Sloppey Joe's</h1>
         <img src="https://www.allrecipes.com/thmb/3k_RHFaM3L163SadypQ1uDjDiN8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/24264-sloppy-joes-dianne-3x2-1-16a5c18a55b94454b36a5424c9dd0c40.jpg" alt="tasty sloppey joe's sandwich" height="300" width="300">
         
-        <h2>Description</h2>
-        <p>A sandwich consisting of ground beef and onions in a tomato-based sauce served on a hamburger bun</p>
+        <h2 class="header">Description</h2>
+        <p class="para">A sandwich consisting of ground beef and onions in a tomato-based sauce served on a hamburger bun</p>
 
-        <h2>Ingredients</h2>
-        <ul>
+        <h2 class="header">Ingredients</h2>
+        <ul class="list">
             <li>1 pound lean ground beef</li>
             <li>1/4 cup chopped onion</li>
             <li>1/4 cup chopped green bell pepper</li>
@@ -25,8 +26,8 @@
             <li>6 hamburger buns, split</li>
         </ul>
 
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="header">Steps</h2>
+        <ol class="list">
             <li>Heat a large skillet over medium heat. Cook and stir lean ground beef in the hot skillet until some of the fat starts to render, 3 to 4 minutes. Add onion and bell pepper; continue to cook until vegetables have softened and beef is cooked through, 3 to 5 minutes</li>
             <li>stir in ketchup, brown sugar, mustard, and garlic powder; season with salt and pepper. Reduce heat to low and simmer for 20 to 30 mintues</li>
             <li>Divide meat mixture evenly among hamburger buns</li>
