Add basic layout and positioning for readability

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     </head>
     
     <body>
-        <h1 class="header">Odin Recipes</h1>
-        <p class="para border">A collection of lunch recpies provided by <a class="link" href="https://www.allrecipes.com/">allrecipes.com</a></p>
-
-        <div class="list">
-            <ul>
-                <li><a class="link" href="./recipes/sloppey-joes.html">sloppey-joes</a></li>
-                <li><a class="link" href="./recipes/fresh-tomato-soup.html">Fresh tomato soup</a></li>
-                <li><a class="link" href="./recipes/potato-salad.html">A potato salad</a></li>
-            </ul>
+        <div class="container">
+            <h1 class="header">Odin Recipes</h1>
+            <p class="para border">A collection of lunch recpies provided by <a class="link" href="https://www.allrecipes.com/">allrecipes.com</a></p>
+    
+            <div class="list">
+                <ul>
+                    <li><a class="link" href="./recipes/sloppey-joes.html">sloppey-joes</a></li>
+                    <li><a class="link" href="./recipes/fresh-tomato-soup.html">Fresh tomato soup</a></li>
+                    <li><a class="link" href="./recipes/potato-salad.html">A potato salad</a></li>
+                </ul>
+            </div>
         </div>
     </body>
 </html>
